<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.fragments.signuplogin.ResetPasswordSuccessFragment">


        <ImageView
            android:id="@+id/tv_header_title"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="200dp"
            android:src="@mipmap/ic_logo" />

        <TextView
            android:id="@+id/tv_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_header_title"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/poppins_extra_bold"
            android:text="@string/password_reset"
            android:textColor="@color/black_bold_text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/black_text_80"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            android:layout_below="@id/tv_pass"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/now_use" />

        <TextView
            android:id="@+id/tv_reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/black_text_80"
            android:textSize="16sp"
            android:layout_centerInParent="true"
            android:layout_below="@id/tv_email"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/to_login" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/tv_reset"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_background"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:backgroundTint="@null" />

    </RelativeLayout>
</layout>