<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.fragments.signuplogin.NewPasswordFragment">

    <LinearLayout
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/iv_back_arrow"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="left"
            android:layout_marginLeft="20dp"
            android:src="@mipmap/ic_back_arrow" />

        <ImageView
            android:id="@+id/tv_header_title"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:src="@mipmap/ic_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/black_bold_text"
            android:layout_marginTop="30dp"
            android:textSize="16sp"
            android:layout_below="@id/tv_header_title"
            android:fontFamily="@font/poppins_extra_bold"
            android:text="@string/new_password" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/black_text_80"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/create_new_pass" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/black_text_80"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/your_acc" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            app:boxStrokeWidth="1dp"
            app:passwordToggleEnabled="true"
            android:hint="@string/password"
            app:errorEnabled="true"
            android:textColorHint="@color/black_opacity_80"
            app:boxStrokeColor="@color/main_color">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@mipmap/password_eye_open"
                android:fontFamily="@font/poppins_semi_bold"
                android:inputType="textPassword"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_con_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            app:boxStrokeWidth="1dp"
            app:passwordToggleEnabled="true"
            android:hint="@string/con_password"
            app:errorEnabled="true"
            android:textColorHint="@color/black_opacity_80"
            app:boxStrokeColor="@color/main_color">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semi_bold"
                android:inputType="textPassword"
                android:drawableRight="@mipmap/icon_eye_close"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <Button
        android:id="@+id/btn_company_signup"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/tv_forgot_pass"
        android:layout_marginLeft="40dp"
        android:layout_marginBottom="40dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:text="@string/confirm"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:backgroundTint="@null" />

</LinearLayout>