<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.fragments.signuplogin.EmailVerifyCodeFragment">

        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingClass">

            <ImageView
                android:id="@+id/iv_back_arrow"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="left"
                android:layout_marginLeft="20dp"
                android:src="@mipmap/ic_back_arrow" />

            <ImageView
                android:id="@+id/tv_header_title"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:src="@mipmap/ic_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/black_bold_text"
                android:layout_marginTop="30dp"
                android:textSize="16sp"
                android:layout_below="@id/tv_header_title"
                android:fontFamily="@font/poppins_extra_bold"
                android:text="@string/verification" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/black_text_80"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:fontFamily="@font/poppins_semi_bold"
                android:text="@string/sent_code" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/black_text_80"
                android:textSize="16sp"
                android:fontFamily="@font/poppins_semi_bold"
                android:text="@string/on_email" />

            <com.chaos.view.PinView
                android:layout_margin="30dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:inputType="number"
                app:viewType="rectangle"
                android:focusable="true"
                android:focusedByDefault="true"
                app:lineColor="@color/main_color"
                app:cursorColor="@color/main_color"
                android:itemBackground="@drawable/button_border"
                app:itemSpacing="30dp"
                app:itemWidth="60dp"
                app:itemHeight="60dp"
                android:hint="1234"
                app:cursorWidth="2dp"
                app:hideLineWhenFilled="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:itemCount="4"
                android:cursorVisible="true" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="20dp"
                    android:textColor="@color/text_color_light"
                    android:textSize="16sp"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:text="@string/no_code" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:gravity="right"
                    android:layout_marginRight="20dp"
                    android:textColor="@color/main_color"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:text="@string/resend" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_verify"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/tv_forgot_pass"
            android:layout_marginLeft="40dp"
            android:layout_marginBottom="40dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/button_background"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/verify_con"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:backgroundTint="@null" />

    </LinearLayout>
</layout>